--- a/src/DotNetSdkHelpers/DotNetSdkHelpers.csproj
+++ b/src/DotNetSdkHelpers/DotNetSdkHelpers.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     </ItemGroup>
 
 </Project>
