--- a/src/DotNetSdkHelpers/DotNetSdkHelpers.csproj
+++ b/src/DotNetSdkHelpers/DotNetSdkHelpers.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <PackAsTool>true</PackAsTool>
+        <ToolCommandName>dotnet-sdk</ToolCommandName>
     </PropertyGroup>
 
     <ItemGroup>
