--- a/src/DotNetSdkHelpers/DotNetSdkHelpers.csproj
+++ b/src/DotNetSdkHelpers/DotNetSdkHelpers.csproj
@@ -1,16 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-        <PackAsTool>true</PackAsTool>
-        <ToolCommandName>dotnet-sdk</ToolCommandName>
-        <LangVersion>7.2</LangVersion>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.4" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    </ItemGroup>
-
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>dotnet-sdk</ToolCommandName>
+    <LangVersion>7.2</LangVersion>
+    <Version>1.0.0</Version>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
 </Project>
