--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '2.1'
+    version: '2.1.x'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'pack'
